--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Generic -->
-    <string name="app_name">Paràmetres de CyanogenMod</string>
+    <string name="app_name">Paràmetres de pffmod</string>
 
     <!--  Primary Screen Settings -->
     <string name="application_settings_title_head">Aplicacions</string>
