--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Generic -->
-    <string name="app_name">CyanogenMod settings</string>
+    <string name="app_name">pffmod settings</string>
 
     <!--  Primary Screen Settings -->
     <string name="application_settings_title_head">Sovellus</string>
