--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Generic -->
-    <string name="app_name">Configurações CyanogenMod</string>
+    <string name="app_name">Configurações pffmod</string>
 
     <!--  Primary Screen Settings -->
     <string name="application_settings_title_head">Aplicação</string>
@@ -595,7 +595,7 @@
     <string name="perm_enable_management">Habilitar gerenciamento</string>
     <string name="perm_enable_management_summary">Habilita gerenciamento de permissões</string>
     <string name="perm_enable_warning_title">Você tem certeza?</string>
-    <string name="perm_enable_warning_message">Aviso!\nA maioria das permissões ao serem revogadas, provavelmente será a causa de problemas nas aplicações. Se uma aplicação com permissões revogadas for forçada a fechar, por favor, conceda as permissões experadas ou não use a aplicação.\Por favor, NÃO mande relatórios de erros ao CyanogenMod se uma aplicação com permissões revogadas não está funcionando como esperado!</string>
+    <string name="perm_enable_warning_message">Aviso!\nA maioria das permissões ao serem revogadas, provavelmente será a causa de problemas nas aplicações. Se uma aplicação com permissões revogadas for forçada a fechar, por favor, conceda as permissões experadas ou não use a aplicação.\Por favor, NÃO mande relatórios de erros ao pffmod se uma aplicação com permissões revogadas não está funcionando como esperado!</string>
     <string name="system_settings_title_subhead">Configurações de Sistema</string>
     <string name="system_settings_summary_head">Log de modificações, statísticas e notificações de atualização de sistema</string>
     <string name="ui_status_bar_toggle_brightness_summary">Permite ajustar o brilho ao deslizar através da barra de status.</string>
