--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Generic -->    
-    <string name="app_name">Настройки CyanogenMod</string>
+    <string name="app_name">Настройки pffmod</string>
 
     <!--  Primary Screen Settings -->
     <string name="application_settings_title_head">Приложения</string>
@@ -612,7 +612,7 @@
 	<!-- Permissions Management Settings strings -->
 	<string name="perm_enable_management">Управление разрешениями</string>
     <string name="perm_enable_management_summary">Включить управление разрешениями приложений</string>
-    <string name="perm_enable_warning_message">Внимание!\nОтмена большинства разрешений может стать причиной сбоев в работе приложений. Если приложение с отменёнными разрешениями выдаёт ошибку, пожалуйста, предоставьте необходимые разрешения или не используйте приложение.\nПожалуйста, не посылайте сообщения об ошибках в CyanogenMod если приложение с отменёнными разрешениями не работает, как и следовало ожидать!</string>
+    <string name="perm_enable_warning_message">Внимание!\nОтмена большинства разрешений может стать причиной сбоев в работе приложений. Если приложение с отменёнными разрешениями выдаёт ошибку, пожалуйста, предоставьте необходимые разрешения или не используйте приложение.\nПожалуйста, не посылайте сообщения об ошибках в pffmod если приложение с отменёнными разрешениями не работает, как и следовало ожидать!</string>
     <string name="perm_enable_warning_title">Вы уверены?</string>
 
 </resources>
